<resources>
    <string name="app_name">OrFo</string>
    <string name="user">User</string>
    <string name="settings">Settings</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="pager_places_title">Places</string>
    <string name="pager_fav_places_title">Favorites</string>
    <string name="a11y_scan_fab">scan qr code to get menu</string>
    <string name="unknown_sign_in_response">An unknown error occurred. Please try again</string>
    <string name="sign_in_cancelled">Sign in cancelled by user</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error occurred</string>
    <string name="sign_in_successful">Successfully Signed In</string>
    <string name="sign_out">Sign Out</string>
    <string name="scan_cancelled">Scan Cancelled</string>
    <string name="a11y_product_image">Product Image</string>
    <string name="add_to_card_product_button_text">Add To Cart</string>
    <string name="productsFoodsHeader">Foods</string>
    <string name="productsStartersHeader">Starters</string>
    <string name="productsMainCourseHeader">Main Course</string>
    <string name="productsFoodsSpecialsHeader">Specials</string>
    <string name="productsFoodsDessertsHeader">Desserts</string>
    <string name="productsBeveragesHeader">Beverages</string>
    <string name="productsBeveragesAlcoholicHeader">Alcoholic Beverages</string>
    <string name="productsBeveragesNonAlcoholicHeader">Non Alcoholic Beverages</string>
    <string name="products_title">Menu</string>
    <string name="unknow_qr_code">Unknown QR Code</string>
    <string name="add_to_card_product_cancel_text">Cancel</string>
    <string name="money_format">%1.2f</string>
    <string name="add_to_cart_dialog_transaction_name">addToCartDialog</string>
    <string name="price_prefix">Price :</string>
    <string name="quantity_prefix">Qty :</string>
    <string name="total_prefix">Total :</string>
    <string name="a11y_remove_from_cart">remove from cart</string>
    <string name="Qty">Qty:</string>
    <string name="a11y_update_cart">update cart</string>
    <string name="a11y_increment">increment</string>
    <string name="a11y_decrement">decrement</string>
    <string name="subtotal_prefix">Subtotal:</string>
    <string name="cart_activity_title">Cart</string>
    <string name="cart_menu_item">Cart</string>
    <string name="dialog_sure_to_delete">Do you want to remove item from cart?</string>
    <string name="yes">YES</string>
    <string name="cancel">CANCEL</string>
    <string name="checked_place_menu_item">Checked-In</string>
    <string name="conn_failure">Failed to connect location service</string>
    <string name="permission_location_failure">Please allow application to use location data</string>
    <string name="scan_qr_code_prompt">Scan Qr Code</string>
    <string name="checked_in_succesfully">Checked In Successfully</string>
    <string name="check_in_progress_message">Please wait…</string>
    <string name="checked_in_failure">Problem during check in. Please try again.</string>
    <string name="user_initialization_message">Your account is initializing…</string>
    <string name="cart_timed_out">Your cart is timed out. Returning back to main screen.</string>
    <string name="location_not_enabled">This operation requires location services.</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="user_tracking_service_description">This service is used only checking you out
    from a place when you leave the place</string>
    <string name="location_permission_not_granted">This operation requires location permission</string>
    <string name="not_at_place">You must be at the place to order</string>
    <string name="getting_location">Please wait while getting location…</string>
    <string name="palce_location_info_error">Place location info is invalid. Please inform any authorized personnel to correct their place address.</string>
    <string name="notification_user_left_place_title">You left place</string>
    <string name="notification_user_left_place_content">Your cart contents are deleted if you have any</string>
    <string name="order_btn">Order</string>
    <string name="total_amount_prefix">Total Amount :</string>
    <string name="processing_order">Sending Order…</string>
    <string name="ordered_succesfully">Order sent successfully</string>
    <string name="order_failure">A problem occurred during order. Please try again</string>
    <string name="place_profile_place_header">Place Name</string>
    <string name="place_profile_address_header">Address</string>
    <string name="place_profile_phone_header">Phone</string>
    <string name="place_profile_placetype_header">Place Type</string>
    <string name="added_to">Place added to favorites</string>
    <string name="added_to_fav">Place added to favorites</string>
    <string name="removed_from_fav">Place removed from favorites</string>
    <string name="ordered_header_items">Ordered Item</string>
    <string name="ordered_header_qty">Qty</string>
    <string name="ordered_header_price">Price</string>
    <string name="ordered_header_total">Sub Total</string>
    <string name="order_history">Order History</string>
    <string name="order_history_ac_title">Order History</string>
    <string name="widget_subText">Nearby Orfo Places</string>
    <string name="widget_header">Nearby Places</string>
    <string name="a11y_place_image">Place Image</string>
    <string name="shared_thumb_img">shared_thumb_image</string>
    <string name="review_request">Do you want to rate this place?</string>
    <string name="send_review_btn">Send</string>
    <string name="hint_review_title">Review Title</string>
    <string name="hint_review">Review</string>
    <string name="review_activity_title">Review Place</string>
    <string name="reviewed_succesfully">Your review is submitted.Thank you for your review.</string>
    <string name="review_failure">A problem occurred. Please try again later.</string>
    <string name="place_not_registered">Place not registerd</string>
    <string name="reviewMax">/5</string>
    <string name="cant_get_review">A problem occurred during getting reviews</string>
    <string name="reviews_header">Reviews</string>
    <string name="registeration_failure_msg">A problem occurred during registeration.Please try again later</string>
    <string name="check_user_exists">Checking user credentials…</string>
    <string name="chat_activity_title">Chat</string>
    <string name="send_button_label">Send</string>
    <string name="chat_menu_item">Chat</string>
    <string name="chat_header">Messages</string>
    <string name="online_users">Online Users</string>
    <string name="anonymous_user">Anonymous</string>
    <string name="empty_view_no_message">:( No Messages Yet. Dont Be Shy ;)</string>
    <string name="empty_view_no_fav">:( Don\'t you have any favorite place ?</string>
    <string name="empty_view_no_order">You cart is empty.</string>
    <string name="order_details_header">Order Details</string>
    <string name="order_details_place">Place :</string>
    <string name="order_details_date">Date :</string>
    <string name="a11y_cart">cart</string>
    <string name="a11y_add_to_cart">add to cart</string>
    <string name="check_out">Check Out</string>
    <string name="cart_product_count">product count</string>
    <string name="placeholder_text">12/17</string>
    <string name="auth_messages_loading">Checking User Credentials…</string>
    <string name="auth_messages_not_authorized">User Not Authorized. Routing to Auth Screen</string>
    <string name="place_messages_place_loading">Loading Menu</string>
    <string name="place_messages_place_loading_error">Error Loading Place Menu</string>
</resources>
