<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/widget_margin"

    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/widgetLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <ImageView
            android:id="@+id/widgetImgLauncher"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher"
            />

        <LinearLayout
            android:id="@+id/widgetTopBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txvWidgetTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/widget_subText"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#4B4B4D" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/widget_header"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="#aaa" />-->

    <ListView
        android:id="@+id/widgetCollectionList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/widgetBg"/>

    <TextView
        android:id="@+id/widgetEmptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"

        tools:text="No Items" />
</LinearLayout>