<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/add_to_cart_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/add_to_cart_product_img_view"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/a11y_product_image"
            android:scaleType="centerCrop"
            android:src="@drawable/no_img_placeholder" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="2"
            android:orientation="vertical">
            <TextView
                android:id="@+id/add_to_cart_product_name_text_view"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Starters" />


            <com.kadirkertis.orfo.utils.NumberSpinner
                android:id="@+id/add_to_cart_quantity_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                app:maxValue="25" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/add_to_cart_single_item_price_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="22sp"
        tools:text="Price: 10.30" />

    <TextView
        android:id="@+id/add_to_cart_quantity_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="22sp"
        tools:text="Quantity: 2" />

    <TextView
        android:id="@+id/add_to_cart_total_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:text="Total: 20.60 " />

    <Button
        android:id="@+id/add_to_cart_product_add_to_cart_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="4dp"
        android:text="@string/add_to_card_product_button_text"
        android:backgroundTint="@color/colorAccent"/>

    <Button
        android:id="@+id/add_to_cart_product_cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="4dp"
        android:text="@string/add_to_card_product_cancel_text"
        android:backgroundTint="@color/colorAccent"/>

</LinearLayout>